# blackmagic-test-fw-archive

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
kinetis/: Makefile.rules
kinetis/k32/l2b/: Makefile.include  k32l2b.ld
kinetis/k32/l2b/blink/: Makefile  blink.cxx  constants.hxx  k32l2b.hxx  platform.hxx  startup.cxx
semihosting/: Makefile.rules
semihosting/stm32f411/: Makefile  consoleHelpers.hxx  hostConsole.cxx  hostConsole.hxx  semihosting.cxx  syscallTypes.hxx  syscalls.cxx  syscalls.hxx
stm32/: Makefile.rules
stm32/f4/: Makefile.include  stm32f4.ld  stm32f410.ld
stm32/f4/serial/: Cargo.toml  Makefile  build.rs  serial.c
stm32/f4/serial/src/: main.rs
stm32/f4/swo/: Makefile  swo.c
stm32/g0/: Makefile.include  stm32g0.ld
stm32/g0/blink/: Makefile  blink.c
